<resources>
    <string name="delivery_state_pickup">수령</string>
    <string name="delivery_state_no_pickup">미수령</string>

    <string name="referendum_vote_ok">1. 동의한다 (%1$d)</string>
    <string name="referendum_vote_no">2. 동의하지 않는다 (%1$d)</string>

    <string name="STR_NOTICE">알림</string>
    <string name="STR_VOTE_ONGOING">투표 진행중입니다.</string>
    <string name="STR_VOTE_OK">1.동의한다</string>
    <string name="STR_VOTE_NO">2.동의하지 않는다</string>
    <string name="STR_VOTE">투표하기</string>
    <string name="STR_DELETE">삭제</string>
    <string name="STR_NOTIFICATION">공지사항</string>
    <string name="STR_REFERENDUM">주민투표</string>
    <string name="STR_DELIVERY">택배</string>
    <string name="STR_VISITOR_CONFIRM">방문자 확인</string>
    <string name="STR_NEW">NEW</string>
    <string name="STR_NOTICE_DATE">공지일</string>
    <string name="STR_STATE">상태</string>
    <string name="STR_ARRIVAL_TIME">도착시간</string>
    <string name="STR_PICKUP_TIME">수령시간</string>
    <string name="STR_COURIER">택배함</string>
    <string name="STR_VISITOR_SCREEN">방문자 화면</string>
    <string name="STR_ENTRANCE">현관</string>
    <string name="STR_VISIT_TIME">방문 시간</string>
    <string name="STR_SELECT_DELETE">선택 삭제</string>
    <string name="STR_ALL_DELETE">전체 삭제</string>
    <string name="STR_CONFIRM">확인</string>
    <string name="STR_COMMON_ENTRANCE">공동현관</string>
    <string name="STR_HOUSEHOLD_ENTRANCE">세대현관</string>

    <string name="STR_IS_PROGRESS_COMPLETED">투표 완료되었습니다.</string>
    <string name="STR_IS_PROCEEDING">투표 진행중입니다.</string>
    <string name="STR_IS_BEFORE_PROCEEDING">투표 진행 전입니다.</string>

    <string name="STR_PROGRESS_COMPLETED">진행 완료</string>
    <string name="STR_PROCEEDING">진행중</string>
    <string name="STR_BEFORE_PROCEEDING">진행전</string>

    <string name="STR_VOTE_MENU_INT_STR">%1$d.%2$s (투표수:%3$d)</string>

    <string name="STR_NUM_0">0</string>
    <string name="STR_NUM_1">1</string>
    <string name="STR_NUM_2">2</string>
    <string name="STR_NUM_3">3</string>
    <string name="STR_NUM_4">4</string>
    <string name="STR_NUM_5">5</string>
    <string name="STR_NUM_6">6</string>
    <string name="STR_NUM_7">7</string>
    <string name="STR_NUM_8">8</string>
    <string name="STR_NUM_9">9</string>

    <string name="STR_ALL_REMOVE">전체\n지움</string>
    <string name="STR_CANCEL">취소</string>
    <string name="STR_APPLY">적용</string>
    <string name="STR_DESCRIPTION_NEW_NOTICE">새로운 알림이 있습니다.</string>

    <string name="STR_QUESTION_VISITOR_SELECT_ITEM_DELETE">선택한 방문자를 삭제하시겠습니까?</string>
    <string name="STR_QUESTION_VISITOR_ALL_ITEM_DELETE">전체 방문자를 삭제하시겠습니까?</string>
</resources>