<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.wallpad.notice.view.notice.vote.VoteDialogViewModel" />
        <variable
            name="view"
            type="com.wallpad.notice.view.notice.vote.InputDialog" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="22dp"
            android:textColor="@color/content_text"
            android:textSize="23sp"
            android:textStyle="bold"
            android:text="@string/STR_VOTE"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="320dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="14dp"
            android:onClick="@{()->view.onClickCancel()}"
            android:src="@drawable/btn_ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="442dp"
            android:alpha="0.15"
            android:background="@color/content_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="312dp"
            android:layout_height="60dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="362dp"
            android:background="@drawable/input_rec"
            android:textColor="@color/content_text"
            android:textSize="28sp"
            android:gravity="end|center_vertical"
            android:paddingEnd="21dp"
            android:text="@{String.valueOf(viewModel.voteCode)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="62dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="168dp"
            android:gravity="center"
            android:background="@color/input_num_back"
            android:textSize="26sp"
            android:textColor="@color/input_num"
            android:text="@string/STR_NUM_1"
            android:onClick="@{()->view.onClickNum(1)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="100dp"
            android:layout_height="62dp"
            android:layout_marginStart="134dp"
            android:layout_marginTop="168dp"
            android:background="@color/input_num_back"
            android:gravity="center"
            android:onClick="@{()->view.onClickNum(2)}"
            android:text="@string/STR_NUM_2"
            android:textColor="@color/input_num"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="62dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="168dp"
            android:background="@color/input_num_back"
            android:gravity="center"
            android:onClick="@{()->view.onClickNum(3)}"
            android:text="@string/STR_NUM_3"
            android:textColor="@color/input_num"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="62dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="236dp"
            android:background="@color/input_num_back"
            android:gravity="center"
            android:onClick="@{()->view.onClickNum(4)}"
            android:text="@string/STR_NUM_4"
            android:textColor="@color/input_num"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="62dp"
            android:layout_marginStart="134dp"
            android:layout_marginTop="236dp"
            android:background="@color/input_num_back"
            android:gravity="center"
            android:onClick="@{()->view.onClickNum(5)}"
            android:text="@string/STR_NUM_5"
            android:textColor="@color/input_num"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="62dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="236dp"
            android:background="@color/input_num_back"
            android:gravity="center"
            android:onClick="@{()->view.onClickNum(6)}"
            android:text="@string/STR_NUM_6"
            android:textColor="@color/input_num"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="62dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="304dp"
            android:background="@color/input_num_back"
            android:gravity="center"
            android:onClick="@{()->view.onClickNum(7)}"
            android:text="@string/STR_NUM_7"
            android:textColor="@color/input_num"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="62dp"
            android:layout_marginStart="134dp"
            android:layout_marginTop="304dp"
            android:background="@color/input_num_back"
            android:gravity="center"
            android:onClick="@{()->view.onClickNum(8)}"
            android:text="@string/STR_NUM_8"
            android:textColor="@color/input_num"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="62dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="304dp"
            android:background="@color/input_num_back"
            android:gravity="center"
            android:onClick="@{()->view.onClickNum(9)}"
            android:text="@string/STR_NUM_9"
            android:textColor="@color/input_num"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="62dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="372dp"
            android:background="@color/input_num_back"
            android:gravity="center"
            android:onClick="@{()->view.onClickRemoveAll()}"
            android:text="@string/STR_ALL_REMOVE"
            android:textColor="@color/input_num"
            android:textSize="16.5sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="62dp"
            android:layout_marginStart="134dp"
            android:layout_marginTop="372dp"
            android:background="@color/input_num_back"
            android:gravity="center"
            android:onClick="@{()->view.onClickNum(0)}"
            android:text="@string/STR_NUM_0"
            android:textColor="@color/input_num"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="100dp"
            android:layout_height="62dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="372dp"
            android:background="@color/input_num_back"
            android:onClick="@{()->view.onClickRemove()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="23dp"
                android:src="@drawable/ic_keypad_delete_nor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="368dp"
            android:layout_height="64dp"
            android:background="@color/dark_15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="184dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="@{()->view.onClickCancel()}"
                android:text="@string/STR_CANCEL"
                android:textColor="@color/content_text"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="184dp"
                android:layout_height="match_parent"
                android:textSize="23sp"
                android:textColor="@color/content_text"
                android:text="@string/STR_VOTE"
                android:onClick="@{()->view.onClickApply()}"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:layout_width="1dp"
                android:layout_height="64dp"
                android:alpha="0.2"
                android:background="@color/content_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>