<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="27dp"
            android:text="@string/STR_ARRIVAL_TIME"
            android:textColor="@color/card_font_alpha_0_4"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="338dp"
            android:layout_marginTop="27dp"
            android:text="@string/STR_PICKUP_TIME"
            android:textColor="@color/card_font_alpha_0_4"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="605dp"
            android:layout_marginTop="27dp"
            android:text="@string/STR_COURIER"
            android:textColor="@color/card_font_alpha_0_4"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="696dp"
            android:layout_marginTop="27dp"
            android:text="@string/STR_STATE"
            android:textColor="@color/card_font_alpha_0_4"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="26dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="30dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:scrollbarSize="12dp"
            android:fadeScrollbars="false"
            android:scrollbarThumbVertical="@color/white_alpha_30"
            android:scrollbarTrackVertical="@color/black_alpha_30"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>