<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.wallpad.notice.view.visitor.VisitorViewModel" />
        <variable
            name="view"
            type="com.wallpad.notice.view.visitor.VisitorFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="27dp"
            android:text="@string/STR_VISITOR_SCREEN"
            android:textColor="@color/card_font_alpha_0_4"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="249dp"
            android:layout_marginTop="27dp"
            android:text="@string/STR_ENTRANCE"
            android:textColor="@color/card_font_alpha_0_4"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="445dp"
            android:layout_marginTop="27dp"
            android:text="@string/STR_VISIT_TIME"
            android:textColor="@color/card_font_alpha_0_4"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="26dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="102dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:scrollbarSize="12dp"
            android:fadeScrollbars="false"
            android:scrollbarThumbVertical="@color/white_alpha_30"
            android:scrollbarTrackVertical="@color/black_alpha_30"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="824dp"
            android:layout_height="72dp"
            android:layout_marginTop="416dp"
            android:background="@color/dialog_font_0_3"
            android:weightSum="824"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/textView19"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="412"
                android:gravity="center"
                android:text="@string/STR_SELECT_DELETE"
                android:textColor="@{@color/card_font}"
                android:textSize="23sp"
                android:onClick="@{()->view.onClickRemoveSelected()}"
                android:clickable="@{viewModel.hasCheck}"
                android:alpha="@{viewModel.hasCheck?1.0f:0.2f}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:background="@color/card_font_alpha_0_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView20" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="412"
                android:gravity="center"
                android:text="@string/STR_ALL_DELETE"
                android:textColor="@{@color/card_font}"
                android:textSize="23sp"
                android:onClick="@{()->view.onClickRemoveAll()}"
                android:clickable="@{viewModel.hasItem}"
                android:alpha="@{viewModel.hasItem?1.0f:0.2f}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>