<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="referendum"
            type="com.wallpad.notice.view.notice.referendum.ReferendumDialogViewModel" />
        <variable
            name="view"
            type="com.wallpad.notice.view.notice.referendum.ReferendumDialog" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dialog_back">

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:text="@{referendum.title}"
            android:textColor="@color/dialog_font"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="702dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="10dp"
            android:onClick="@{()->view.onClickClose()}"
            android:src="@drawable/btn_ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/frameLayout11"
            android:layout_width="754dp"
            android:layout_height="1dp"
            android:layout_marginTop="75dp"
            android:alpha="0.15"
            android:background="@color/dialog_font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="187dp"
            android:layout_marginTop="76dp"
            android:fadeScrollbars="false"
            android:orientation="vertical"
            android:scrollbarSize="12dp"
            android:scrollbarThumbVertical="@color/white"
            android:scrollbarTrackVertical="@color/black_alpha_20"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:paddingStart="28dp"
                android:paddingTop="24dp"
                android:paddingEnd="28dp"
                android:paddingBottom="16dp"
                android:text="@{referendum.content}"
                android:textColor="@color/dialog_font"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </ScrollView>

        <FrameLayout
            android:id="@+id/frameLayout10"
            android:layout_width="698dp"
            android:layout_height="1dp"
            android:layout_marginTop="263dp"
            android:alpha="0.2"
            android:background="#999999"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="291dp"
            android:src="@drawable/ic_information_warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/STR_VOTE_ONGOING"
            android:textColor="#b00020"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
            app:layout_constraintStart_toEndOf="@+id/imageView11"
            app:layout_constraintTop_toTopOf="@+id/imageView11" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="698dp"
            android:layout_height="54dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="325dp"
            android:layout_marginEnd="28dp"
            android:max="@{referendum.okCount+referendum.noCount}"
            android:progressDrawable="@drawable/referendum_ok_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:progress="@{referendum.okCount}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/STR_VOTE_OK"
            android:textColor="@color/white"
            android:textSize="18.5sp"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/progressBar3" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="698dp"
            android:layout_height="54dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:max="@{referendum.okCount+referendum.noCount}"
            android:progressDrawable="@drawable/referendum_no_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar3"
            app:progress="@{referendum.noCount}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/STR_VOTE_NO"
            android:textColor="@color/white"
            android:textSize="18.5sp"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/progressBar2" />

        <TextView
            android:layout_width="376dp"
            android:layout_height="64dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/dialog_font"
            android:textSize="23sp"
            android:textStyle="bold"
            android:text="@string/STR_VOTE"
            android:gravity="center"
            android:background="@color/dialog_font_0_1_5"
            android:onClick="@{()->view.onClickVote()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar2" />

        <TextView
            android:layout_width="376dp"
            android:layout_height="64dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/STR_CONFIRM"
            android:textColor="@color/dialog_font"
            android:textSize="23sp"
            android:textStyle="bold"
            android:background="@color/dialog_font_0_1_5"
            android:onClick="@{()->view.onClickOk()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>